fix discount cancel svg use consistent spacing across pages for tablet size adjust carousel display for tablet/mobile

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -16,7 +16,7 @@
   @media screen and (max-width: $break-medium)
     left: 0
     margin: 0 auto
-    max-width: 575px
+    max-width: 500px
     
 .cart-item
   +pie-clearfix
@@ -131,7 +131,7 @@
     bottom: 60px
     left: 0
     margin: 0 auto
-    max-width: 575px
+    max-width: 500px
     padding: 32px 0
     width: 100%
 
@@ -163,9 +163,6 @@
   width: 100%
   
   @media screen and (max-width: $break-medium)
-    max-width: 575px
-  
-  @media screen and (max-width: $break-small)
     max-width: 100%
   
   .checkout-btn-icon
