--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -53,7 +53,10 @@
   @media screen and (max-width: $break-medium)
     display: block
     margin: 0 auto
-    max-width: 75%
+    max-width: 600px
+    
+  @media screen and (max-width: $break-small)
+    
     
 .message-sent
   font-size: 13px
