--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -546,8 +546,9 @@ h1
   @media screen and (max-width: $break-medium)
     float: none
     margin: 0 auto
-    padding: 0 20px
   
+  @media screen and (max-width: $break-small)
+    max-width: 100%
   
 .custom-page-content
   img, iframe
