--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -46,7 +46,7 @@ h2.product-price
   
   @media screen and (max-width: $break-medium)
     margin: 0 auto 
-    max-width: 600px
+    max-width: 500px
   
   @media screen and (max-width: $break-small)
     padding: 0 20px
@@ -72,7 +72,7 @@ h2.product-price
   margin-bottom: 40px
   
   @media screen and (max-width: $break-medium)
-    max-width: 600px
+    max-width: 500px
     margin: 0 auto 40px
     
   @media screen and (max-width: $break-small)
@@ -155,7 +155,7 @@ h2.product-price
     bottom: 0
     height: 100vh
     left: 0
-    padding: 60px
+    padding: 60px 0
     object-fit: contain
     right: 0
     top: 0
@@ -280,3 +280,7 @@ h2.product-price
       .product-thumbnails
         padding-top: 20px
         top: 0
+        
+@media screen and (max-width: $break-small)
+  .product-image-panel .full-product-images
+    max-width: 100%
