--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -201,6 +201,7 @@
     display: none
 
   .image-list-container
+    background: none
     bottom: auto
     height: 100%
     left: auto
@@ -209,9 +210,6 @@
     padding-bottom: 0
     position: relative
     right: auto
-    
-    &.image-fill
-      background: none
     
     .flickity-viewport
       position: absolute
@@ -230,8 +228,8 @@
         transform: scale(1)
       
     .product-image-background
-      max-width: 100%
-      max-height: 80%
+      max-height: 85%
+      width: 85%
       padding: 20px
       transform: scale(.9)
       transition: transform 0.3s
@@ -250,10 +248,6 @@
         font-size: 15px
         margin-top: 10px
         
-    &.image-fill .product-image-background
-      max-height: 85%
-      width: 85%
-
 @media screen and (max-width: $break-medium) and (orientation: landscape)
   .image-list-container
     
@@ -273,12 +267,10 @@
       .product-image-background
         margin-top: 20px
         max-height: 55%
+        object-fit: contain
         padding: 0
+        width: 100%
         
     .product-details
       font-size: 20px
       margin-top: 0
-  
-    &.image-fill .product-image-background
-      object-fit: contain
-      width: 100%
